--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -28,7 +28,7 @@ const {
   <div class="w-full px-8 sm:px-12 lg:px-16">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
       <div class="space-y-8">
-        <h1 class="text-4xl sm:text-5xl lg:text-6xl font-semibold leading-tight" style="color: rgb(52, 58, 90);">
+        <h1 class="font-semibold leading-tight" style="color: rgb(52, 58, 90); font-size: 50px;">
           {title}
         </h1>
 
