--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -27,7 +27,7 @@ const {
 <section class="relative bg-gray-50 overflow-hidden pt-24 pb-32 sm:pt-28 sm:pb-40 lg:pt-32 lg:pb-48">
   <div class="w-full px-8 sm:px-12 lg:px-16">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-      <div class="space-y-8">
+      <div class="space-y-8 max-w-xl">
         <h1 class="font-semibold leading-tight" style="color: rgb(52, 58, 90); font-size: 50px;">
           {title}
         </h1>
