--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,8 +6,8 @@
   :root {
     --color-navy: #0A2540;
     --color-navy-dark: #051729;
-    --color-orange: #FF6B35;
-    --color-orange-dark: #E65529;
+    --color-orange: #EC7A00;
+    --color-orange-dark: #d66e00;
     --color-slate: #475569;
     --color-light: #F8FAFC;
     --color-border: #E2E8F0;
